# zekrom-arkworks

./: .gitignore  Cargo.toml  README.md  parameters.sage
.github/workflows/: ci.yml
benches/: all.rs  time.rs
src/: api.rs  lib.rs
src/ciminion/: chip.rs  circuit.rs  mod.rs  params.rs  primitives.rs  tests.rs
src/common/: constraints.rs  mod.rs  pattern.rs  test_utils.rs
src/griffin/: ae_circuit.rs  chip.rs  hash_circuit.rs  mod.rs  params.rs  primitives.rs  tests.rs
src/neptune/: ae_circuit.rs  chip.rs  hash_circuit.rs  mod.rs  params.rs  primitives.rs  tests.rs
src/rescue_prime/: chip.rs  circuit.rs  mod.rs  params.rs  primitives.rs  tests.rs
